--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-opencv-python-headless==4.11.0.86
+absl-py==2.1.0
 easyocr==1.7.2
+filelock==3.16.1
 numpy==1.26.4
+opencv-python==4.11.0.86
+pillow==10.4.0
+pyclipper==1.3.0.post5
+python-bidi==0.6.0
+requests==2.32.3
+scipy==1.14.1
+shapely==2.0.6
 streamlit==1.40.2
+tqdm==4.67.0
+torch==2.4.1
+torchvision==0.19.1
